<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/login_instructions"
        style="@style/instructions"/>
        
    
    <TextView
        android:id="@+id/usernameLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/user_name"
        tools:context=".LoginActivity" />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/usernameLbl"
        android:layout_marginTop="5dp"
        android:ems="10" 
        android:inputType="text"/>
    
    <TextView
        android:id="@+id/passwordLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/usernameLbl"
        android:layout_below="@id/username"
        android:layout_marginTop="15dp"
        android:text="@string/password" />
    
    <EditText
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLbl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword" />
        
    <LinearLayout 
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPassword"
        android:layout_marginTop="35dp"
        android:weightSum="1.0" 
        >
        <Button
	        android:id="@+id/cancelBtn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/cancel" />
	    <Button
	        android:id="@+id/loginBtn"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/login" />
	    
   </LinearLayout>
</RelativeLayout>
