<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutScroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutTheAtlasActivity"
    android:background="@drawable/backgroundblue"
    android:fillViewport="true">
    
	<LinearLayout 
   		android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp" >
        
        <LinearLayout
	        android:id="@+id/LinearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.3"
	            android:layout_marginLeft="5dp"
	            android:paddingBottom="5dp"
	            android:scaleType="centerInside"
	            android:src="@drawable/logo_about_ala" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.7"
                android:paddingBottom="3dp"
                android:text="@string/about_ala_header"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="5dp"
               android:layout_marginLeft="5dp"
               android:layout_marginTop="5dp"
               android:paddingBottom="3dp"
               android:text="@string/about_ala_paragraph_1"
               android:textAppearance="?android:attr/textAppearanceSmall" />

           <TextView
               android:id="@+id/textView3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="5dp"
               android:layout_marginLeft="5dp"           
               android:paddingBottom="3dp"
               android:text="@string/about_ala_paragraph_2"
               android:textAppearance="?android:attr/textAppearanceSmall" />

           <TextView
               android:id="@+id/textView4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="5dp"
               android:layout_marginLeft="5dp"
               android:paddingBottom="3dp"
               android:text="@string/about_ala_paragraph_3"
               android:textAppearance="?android:attr/textAppearanceSmall" />

           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginBottom="10dp"
               android:text="@string/about_ala_url"
               android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

        
</ScrollView>